--- a/apps/docs/src/components/mdx/Aside.astro
+++ b/apps/docs/src/components/mdx/Aside.astro
@@ -60,7 +60,9 @@ const Icon = {
       }
     </p>
   </div>
-  <div class="space-y-2 pl-6 [&_p]:leading-relaxed [&_p]:text-sm">
+  <div
+    class="space-y-2 pl-6 [&_p]:leading-relaxed [&_p]:text-sm [&_li]:leading-relaxed [&_li]:text-sm"
+  >
     <slot />
   </div>
 </aside>
