--- a/apps/docs/src/components/mdx/LinkCard.astro
+++ b/apps/docs/src/components/mdx/LinkCard.astro
@@ -10,7 +10,7 @@ type Props = {
 const { title, description, href } = Astro.props;
 ---
 
-<a class="p-4 border rounded shadow-lg shadow-fg/5" href={href}>
+<a class="flex flex-col gap-1 p-4 border rounded shadow-lg shadow-fg/5" href={href}>
   <p class="text-lg font-semibold flex items-center justify-between gap-2">
     {title}
     <ArrowRightIcon />
