feat: add references, merge KilpiCore settings and defaults, rename defaults.onUnauthorized to settings.defaultOnUnauthorized

--- a/apps/docs/src/components/mdx/Heading5.astro
+++ b/apps/docs/src/components/mdx/Heading5.astro
@@ -7,6 +7,6 @@ type Props = HTMLAttributes<"h5">;
 const { class: className, ...props } = Astro.props;
 ---
 
-<h5 class={cn("text-2xl font-bold tracking-tight scroll-m-24", className)} {...props}>
+<h5 class={cn("font-semibold tracking-tight scroll-m-24", className)} {...props}>
   <slot />
 </h5>
