feat: rewriting documentation

--- a/apps/docs/src/components/docs/DocBreadcrumbs.astro
+++ b/apps/docs/src/components/docs/DocBreadcrumbs.astro
@@ -1,5 +1,5 @@
 ---
-import { SIDEBAR_FOLDER_CONFIG } from "@/consts";
+import { SIDEBAR_FOLDER_CONFIG } from "@/sidebar.config";
 import type { CollectionEntry } from "astro:content";
 import { ChevronRightIcon } from "lucide-react";
 
