--- a/apps/docs/src/components/mdx/GenerateSecretButton.astro
+++ b/apps/docs/src/components/mdx/GenerateSecretButton.astro
@@ -55,6 +55,16 @@ const { target } = Astro.props;
 
         // Replace button target with secret to enable regeneration
         button.setAttribute("data-target", secret);
+
+        // Get containing `figure` and `code` and related copy to clipboard button
+        const figureEl = targetSpan.closest("figure");
+        const codeLineEls = figureEl?.querySelectorAll("code > div.ec-line");
+        const copyButton = figureEl.querySelector("button[data-code][data-copied]");
+
+        if (figureEl && codeLineEls && copyButton) {
+          const newCode = [...codeLineEls].map((line) => line.textContent).join("\n");
+          copyButton.setAttribute("data-code", newCode);
+        }
       });
     });
   })();
