feat: forgot to save this file

--- a/apps/docs/src/pages/blog/index.astro
+++ b/apps/docs/src/pages/blog/index.astro
@@ -31,7 +31,7 @@ const shownBlogs = blogs.filter((_) => !_.data.archivedAt);
       <Section class="py-0" style={{ maxWidth: "660px" }}>
         <div class="p-16 rounded border border-dashed text-black/50 text-center">
           No articles to show
-        </div>{" "}
+        </div>
       </Section>
     ) : (
       <Section class="py-0" style={{ maxWidth: "660px" }}>
