feat: new docs completed

--- a/apps/docs/src/components/landing-page/BottomGetStartedSection.astro
+++ b/apps/docs/src/components/landing-page/BottomGetStartedSection.astro
@@ -9,7 +9,7 @@ import Button from "../ui/Button.astro";
   <Section id="bottom-get-started">
     <div class="flex flex-col gap-4">
       <h2 class="text-3xl text-center font-bold tracking-tight sm:text-4xl">
-        Ready to Get Started?
+        Ready to get started?
       </h2>
 
       <p class="max-w-xl text-center mx-auto text-muted-fg">
@@ -18,9 +18,11 @@ import Button from "../ui/Button.astro";
       </p>
     </div>
 
-    <Button as="a" href="/docs/getting-started/introduction" size="lg" class="gap-2 w-fit mx-auto">
+    <Button as="a" href="/docs/getting-started/quickstart" size="lg" class="gap-2 w-fit mx-auto">
       Read the Docs
       <ArrowRightIcon />
     </Button>
+
+    <p class="text-muted-fg text-center">You'll have Kilpi up and running in just minutes!</p>
   </Section>
 </FullBleed>
