--- a/apps/docs/src/components/layout/Banner.astro
+++ b/apps/docs/src/components/layout/Banner.astro
@@ -1,5 +1,5 @@
 <div
-  class="bg-accent-500 flex items-center justify-center text-bg py-2 w-screen relative left-1/2 -translate-x-1/2"
+  class="bg-accent-500 px-8 flex items-center justify-center text-bg py-2 w-screen relative left-1/2 -translate-x-1/2"
 >
   <slot />
 </div>
