feat: minor updates

--- a/apps/docs/src/components/landing-page/WhatIsAuthorizationSection.astro
+++ b/apps/docs/src/components/landing-page/WhatIsAuthorizationSection.astro
@@ -24,7 +24,7 @@ import dedent from "dedent";
           <strong>Authentication</strong>
           <em>(not authorization)</em> is asking <strong>"Who are you?"</strong> to recognize and verify
           the identity of the <strong>subject</strong>
-          <em>(i.e. user, service, AI agent, ...)</em>.
+          <em>(the user or even another service or AI agent)</em>.
         </p>
       </div>
     </div>
