docs: fix docs link

--- a/apps/docs/src/pages/index.astro
+++ b/apps/docs/src/pages/index.astro
@@ -23,7 +23,7 @@ blogs.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
   <Banner>
     <span class="font-semibold">
       🔥 Introducing Kilpi v1.0 and the new Kilpi API —
-      <a class="underline" href="/blog/2025-10-10-kilpi-v1.0"> Read the article </a>
+      <a class="underline" href="/blog/2025-10-10-kilpi-v1-0"> Read the article </a>
     </span>
   </Banner>
 
