--- a/apps/docs/src/components/mdx/Aside.astro
+++ b/apps/docs/src/components/mdx/Aside.astro
@@ -20,10 +20,10 @@ const Icon = {
   class={cn(
     "flex rounded border gap-1 flex-col p-2",
     {
-      warning: "border-orange-100 bg-orange-50",
-      tip: "border-purple-100 bg-purple-50",
-      success: "border-green-100 bg-green-50",
-      note: "border-blue-100 bg-blue-50",
+      warning: "border-orange-100 bg-orange-50 dark:bg-orange-600/20 dark:border-orange-900",
+      tip: "border-purple-100 bg-purple-50 dark:bg-purple-600/20 dark:border-purple-900",
+      success: "border-green-100 bg-green-50 dark:bg-green-600/20 dark:border-green-900",
+      note: "border-blue-100 bg-blue-50 dark:bg-blue-600/20 dark:border-blue-900",
     }[type]
   )}
 >
@@ -32,10 +32,10 @@ const Icon = {
       className={cn(
         "size-4",
         {
-          warning: "text-orange-700",
-          tip: "text-purple-700",
-          success: "text-green-700",
-          note: "text-blue-700",
+          warning: "text-orange-700 dark:text-orange-400",
+          tip: "text-purple-700 dark:text-purple-400",
+          success: "text-green-700 dark:text-green-400",
+          note: "text-blue-700 dark:text-blue-400",
         }[type]
       )}
     />
@@ -43,10 +43,10 @@ const Icon = {
       class={cn(
         "text-sm font-semibold",
         {
-          warning: "text-orange-700",
-          tip: "text-purple-700",
-          success: "text-green-700",
-          note: "text-blue-700",
+          warning: "text-orange-700 dark:text-orange-400",
+          tip: "text-purple-700 dark:text-purple-400",
+          success: "text-green-700 dark:text-green-400",
+          note: "text-blue-700 dark:text-blue-400",
         }[type]
       )}
     >
