docs: improve landing page

--- a/apps/docs/src/components/landing-page/WhatIsAuthorizationSection.astro
+++ b/apps/docs/src/components/landing-page/WhatIsAuthorizationSection.astro
@@ -21,9 +21,10 @@ import dedent from "dedent";
       <hr class="my-6" />
       <div class="space-y-6 text-lg opacity-80">
         <p>
-          <strong>Authentication</strong>
-          <em>(not authorization)</em> is asking <strong>"Who are you?"</strong> to recognize and verify
-          the identity of the <strong>subject</strong>
+          <strong>Authentication</strong> runs <strong>before authorization</strong>
+          and asks <strong>"Who are you?"</strong> to recognize and verify the identity of the <strong
+            >subject</strong
+          >
           <em>(the user or even another service or AI agent)</em>.
         </p>
       </div>
